--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
-index.html
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="styles.css">
+<title>Our Menu</title>
 </head>
 <body>
+	<h1>Our Menu</h1>
+	<div class="section1 col-lg-3 col-md-3">
+		<div><p class="section1_title">Chicken</p>
+			<div><p class="sectiontext1">Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
+			</div>
+		</div>
+	</div>
+	<div class="section2 col-lg-3 col-md-3">
+		<div><p class="section2_title">Beef</p>
+			<div><p class="sectiontext1">Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="section3 col-lg-3 col-md-3">
+		<div><p class="section3_title">Sushi</p>
+			<div><p class="sectiontext1">Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
