--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--HTML file for Coursera Module 2-->
 <html>
 <head>
 <meta charset="utf-8">
@@ -6,26 +7,33 @@
 <title>Our Menu</title>
 </head>
 <body>
-	<h1>Our Menu</h1>
-	<div class="section1 col-lg-3">
-		<div><p class="section1_title">Chicken</p>
-			<div><p class="sectiontext1">Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
-			</div>
-		</div>
-	</div>
-	<div class="section2 col-lg-3">
-		<div><p class="section2_title">Beef</p>
-			<div><p class="sectiontext1">Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
-			</div>
-		</div>
-	</div>
-
-	<div class="section3 col-lg-3">
-		<div><p class="section3_title">Sushi</p>
-			<div><p class="sectiontext1">Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
-			</div>
-		</div>
-	</div>
+<h1>Our Menu</h1>
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	<div class="title1">
+  		<b>Chicken</b>
+  	</div>
+    <div>
+    	<p>Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	<div class="title2">
+  		<b>Beef</b>
+  	</div>
+    <div>
+    	<p>Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-12 col-sm-12">
+  	<div class="title3">
+  		<b>Sushi</b>
+  	</div>
+    <div>
+    	<p>Lorem ipsum dolor sit omet, cousectetur apidisicing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequot</p>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
